fixed image overlap while scaling card
- added z-index to container
- added postion:relative to thumbnail for next/image layout fill

--- a/styles/ProjectCard.module.css
+++ b/styles/ProjectCard.module.css
@@ -1,11 +1,11 @@
 .container {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100%;
   min-height: 240px;
-  /* background-color: var(--main-bg); */
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   transition: 0.3s ease-in-out;
 }
@@ -16,6 +16,7 @@
 
 .thumbnail {
   padding: 30px 20px;
+  position: relative;
 }
 
 .content {
@@ -32,7 +33,9 @@
 
 .container:hover {
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
-  transform: scalez(1.2) scale(1.2);
+  transform: scale(1.2);
+  background-color: var(--main-bg);
+  z-index: 2;
 }
 
 .flexRow {
